src/stylesheets/lungo.media.phone.styl
@import "__init.styl"

/* ==== Any phone ==== */
@media only screen and (max-width: 767px)
  body
    &[data-position="absolute"] > section
      position: absolute
    &[data-position="fixed"] > section
      position: fixed

    & > aside
      position: absolute
      display: none !important
      &.show
        display: block !important

    & > section
      display: none
      &:not([data-transition]).show
        display: block

      &.show.aside
        &:not(.right)
          transform translateX(ASIDE_WIDTH)
        &.right
          transform translateX(-(ASIDE_WIDTH))
      &.show.hide
        z-index: -1

      &[data-transition]
        display-box()
        transition-property opacity, z-index, transform,        scale, opacity
        transition-duration TRANSITION_TIME
        transition-timing-function DEFAULT_TRANSITION
        backface-visibility hidden

      /* Transition: SLIDE */
      &[data-transition="slide"]
        visibility: visible
        &.show, &:first-child
          transform translateX(0%)
        &:not(first-child)
          transform translateX(100%)
        &.hide
          transform scale(0.9)
          opacity: 0.75

      /* Transition: COVER */
      &[data-transition="cover"]
        transform translateY(100%)
        &.show, &.hide
          transform translateY(0%)
        &.hide
          transform scale(0.9)
          opacity: 0.75

      /* Transition: POP */
      &[data-transition="pop"]
        opacity: 0
        transform scale(1.15)
        &.show
          transform scale(1)
          opacity: 1
        &.hide
          transform scale(0.9)
          opacity: 0

      /* Transition: FADE */
      &[data-transition="fade"]
        opacity: 0
        &:first-child, &.show
          opacity: 1
        &:hide
          opacity: 0

